package com.etu.infrastructure.state.dto.runtime.rm;

public enum RModelLinkSideType {
    ONE,
    MANY
}
