package com.etu.infrastructure.state.dto.runtime.rm;

public enum RModelLinkType {
    ONE_TO_ONE,
    ONE_TO_MANY
}
