package com.etu.infrastructure.state.dto.runtime.rm;

public enum RModelRelationAttributeDataType {
    BIT,
    TINYINT,
    SMALLINT,
    INT,
    REAL,
    FLOAT,
    DECIMAL,
    DATE,
    TIME,
    DATETIME,
    CHAR,
    OLE,
}
